--- a/confirmation.html
+++ b/confirmation.html
@@ -14,7 +14,7 @@
 		<div class="ui raised very padded text container segment">
 		  <h2 class="ui huge header">Thank You for Showing Interest</h2>
 		  <p>Please click the below button to pay</p>
-		  <button id="rzp-button1" class="ui purple basic button" type="submit">Pay with Razorpay</button>
+		  <button id="rzp-button1" class="ui purple basic button" type="submit">Choose your payment method</button>
 		</div>
 	</div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.debug.js"></script>
