--- a/confirmation.html
+++ b/confirmation.html
@@ -29,7 +29,7 @@
   doc.text(23, 12, "EVENT!")
   doc.text(23, 81, name);
   doc.text(23, 101, email);
-  doc.save('test.pdf');
+  doc.save('payment_details.pdf');
   window.localStorage.clear();
   }
 </script>
