--- a/index.html
+++ b/index.html
@@ -38,7 +38,16 @@
             </div>
 
             <div class="field">
-                <input type="radio" option="Yes">1
+                <label>Members</label>
+                <input type="radio" option="Yes">1<br>
+                <input type="radio" option="Yes">2<br>
+                <input type="radio" option="Yes">3<br>
+                <input type="radio" option="Yes">4+<br>
+            </div>
+
+            <div class="field">
+                <label>Any Comments</label>
+                <textarea name="comment" id="comment" >Any Comments...</textarea>
             </div>
 
 
