Resolved Some Bugs

--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 
             <div class="field">
                 <label>Members</label>
-                <input type="radio" option="Yes">1<br>
-                <input type="radio" option="Yes">2<br>
-                <input type="radio" option="Yes">3<br>
-                <input type="radio" option="Yes">4+<br>
+                <input type="radio" name="Yes">1<br>
+                <input type="radio" name="Yes">2<br>
+                <input type="radio" name="Yes">3<br>
+                <input type="radio" name="Yes">4+<br>
             </div>
 
             <div class="field">
