--- a/confirmation.html
+++ b/confirmation.html
@@ -17,7 +17,7 @@
         <button id="rzp-button1" class="ui purple basic button" type="submit">Pay with Razorpay</button>
     </div>
 </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.debug.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.4.1/jspdf.debug.js"></script>
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script>
     function pdf() {
@@ -30,7 +30,7 @@
         doc.text(23, 81, name);
         doc.text(23, 101, email);
         doc.save('payment_details.pdf');
-        window.localStorage.clear();
+        window.localStorage.clear();        
     }
 </script>
 <script>
@@ -43,11 +43,8 @@
             "name": "Organization name",
             "description": "Event Name",
             "image": "/your_logo.png",
-            "handler": (response) => {
-                setTimeout(function () {
-                    pdf();
-                    window.location = "./index.html";
-                }, 2000);
+            "handler": (response) => {                              
+                pdf();                     
             },
             "prefill": {
                 "email": email
@@ -59,8 +56,13 @@
         let rzp1 = new Razorpay(options);
 
         document.getElementById('rzp-button1').onclick = function (e) {
-            rzp1.open();
-            e.preventDefault();
+            if (window.localStorage.getItem("name")){
+                rzp1.open();
+                e.preventDefault();
+            } else {
+                window.location = './index.html';
+            }
+           
         }
     })();
 </script>
