--- a/index.html
+++ b/index.html
@@ -22,6 +22,23 @@
 			    <label>E-mail</label>
 			    <input id="email" name="email" placeholder="E-mail" type="email">
 			  </div>
+				<div class="field">
+			    <label>Number</label>
+			    <input id="number" name="number" placeholder="Number" type="number">
+			  </div>
+				<div class="field">
+					<label>Radio Buttons</label>
+					<input type="radio" value="radio 1"checked="checked" name="radio"> One
+					<input type="radio"  name="radio" value="radio 2"> Two
+				</div>
+				<div class="field">
+
+					<label >Check Boxes</label>
+					  <input name="check"class="messageCheckbox" type="checkbox" checked="checked" value="CheckBox 1"> One
+						 <input name="check" class="messageCheckbox" type="checkbox" value="CheckBox 1" > Two
+				</div>
+
+
 			  <button id="submit" class="ui purple basic button" type="submit">Submit</button>
 		  </form>
 		</div>
@@ -31,8 +48,28 @@
 	document.querySelector('#submit').onclick = function(e){
 		var form_name = document.querySelector('#name').value;
 		var form_email = document.querySelector('#email').value;
+		var form_number = document.querySelector('#number').value;
+		var checkedValue = null;
+		var checkedInputElements = document.getElementsByClassName('messageCheckbox');
+for(var i=0; checkedInputElements[i]; ++i){
+      if(checkedInputElements[i].checked){
+           checkedValue = checkedInputElements[i].value;
+           break;
+      }
+}
+var radio = document.getElementsByName('radio');
+var radio_val;
+for(var i = 0; i < radio.length; i++){
+    if(rates[i].checked){
+        radio_val = radio[i].value;
+    }
+}
 		window.localStorage.setItem("name", form_name);
 		window.localStorage.setItem("email", form_email);
+		window.localStorage.setItem("email", form_number);
+		window.localStorage.setItem("check", checkedValue);
+			window.localStorage.setItem("radio", radio_val);
+
 	}
 </script>
 </html>
