--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css" />
 	<style>
 	 #box-container {
-    	margin-top: 150px;
+    	margin-top: 100px;
 	}
 	</style>
 </head>
@@ -37,9 +37,12 @@
 					  <input name="check"class="messageCheckbox" type="checkbox" checked="checked" value="CheckBox 1"> One
 						 <input name="check" class="messageCheckbox" type="checkbox" value="CheckBox 1" > Two
 				</div>
+				<div class="field">
+<label>Text Area</label>
+		<textarea rows="4" cols="10"></textarea>
+				</div>
 
-
-			  <button id="submit" class="ui purple basic button" type="submit">Submit</button>
+  <button id="submit" class="ui purple basic button" type="submit">Submit</button>
 		  </form>
 		</div>
 	</div>
