--- a/index.html
+++ b/index.html
@@ -22,6 +22,15 @@
                 <label>E-mail</label>
                 <input id="email" name="email" placeholder="E-mail" type="email">
             </div>
+             <label>Checkbox</label>
+            <input type="checkbox" name="check" value="check1" checked="checked">checkBox 1<br>
+            <input type="checkbox" name="check" value="check2" >checkBox 2<br>
+            
+            <label>Gender</label>
+              <input type="radio" name="gender" value="male" checked> Male<br>
+              <input type="radio" name="gender" value="female"> Female<br>
+            
+            <textarea rows="4" cols="50" name="address">Address</textarea>
             <button id="submit" class="ui purple basic button" type="submit">Submit</button>
         </form>
     </div>
