--- a/index.html
+++ b/index.html
@@ -1,38 +1,33 @@
-<!DOCTYPE html>
-<html>
-<head>
-    <title>PaytoPDF</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css"/>
-    <style>
-        #box-container {
-            margin-top: 150px;
-        }
-    </style>
-</head>
-<body>
-<div id="box-container">
-    <div class="ui raised very padded text container segment">
-        <h2 class="ui header">Event Name</h2>
-        <form class="ui form" action="./confirmation.html">
-            <div class="field">
-                <label>Name</label>
-                <input id="name" name="name" placeholder="Name" type="text">
+<!doctype html>
+<html lang="en" dir="ltr">
+  <head>
+    <meta charset="utf-8">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>PaytoPDF</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css"/>
+        <link href="/css/app.css" rel="stylesheet">
+    </head>
+    <body>
+        <div class="box-wrapper">
+            <div id="box-container">
+                <div class="ui raised very padded text container segment">
+                    <h2 class="ui header">Event Name</h2>
+                    <form class="ui form" action="./confirmation.html">
+                        <div class="field">
+                            <label>Name</label>
+                            <input id="name" name="name" placeholder="Name" type="text">
+                        </div>
+                        <div class="field">
+                            <label>E-mail</label>
+                            <input id="email" name="email" placeholder="E-mail" type="email">
+                        </div>
+                        <button id="submit" class="ui purple basic button" type="submit">Submit</button>
+                    </form>
+                </div>
             </div>
-            <div class="field">
-                <label>E-mail</label>
-                <input id="email" name="email" placeholder="E-mail" type="email">
-            </div>
-            <button id="submit" class="ui purple basic button" type="submit">Submit</button>
-        </form>
-    </div>
-</div>
-</body>
-<script>
-    document.querySelector('#submit').onclick = function (e) {
-        let form_name = document.querySelector('#name').value;
-        let form_email = document.querySelector('#email').value;
-        window.localStorage.setItem("name", form_name);
-        window.localStorage.setItem("email", form_email);
-    }
-</script>
+        </div>
+
+        <script src="/js/app.js"></script>
+    </body>
 </html>
