--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <title>PaytoPDF</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.3.3/semantic.min.css"/>
@@ -11,19 +11,19 @@
         <h2 class="ui header">Event Name</h2>
         <form class="ui form" action="./confirmation.html">
             <div class="field">
-                <label>Name</label>
+                <label for="name">Name</label>
                 <input id="name" name="name" placeholder="Name" type="text">
             </div>
             <div class="field">
-                <label>E-mail</label>
+                <label for="email">E-mail</label>
                 <input id="email" name="email" placeholder="E-mail" type="email">
             </div>
             <button id="submit" class="ui purple basic button" type="submit">Submit</button>
         </form>
     </div>
 </div>
-</body>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.5/jspdf.debug.js"></script>
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 <script src="assets/js/script.js"></script>
+</body>
 </html>
