--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
                 <label>E-mail</label>
                 <input id="email" name="email" placeholder="E-mail" type="email">
             </div>
+            <div class="field">
+                <label>Gender</label>
+                <input type="radio" name="gender" value="male" checked> Male<br>
+                <input type="radio" name="gender" value="female"> Female<br>
+                <input type="radio" name="gender" value="other"> Other<br>
+            </div>
             <button id="submit" class="ui purple basic button" type="submit">Submit</button>
         </form>
     </div>
