Added Password, Checkbox and Dropdown fields
Updated index.html

--- a/index.html
+++ b/index.html
@@ -18,6 +18,24 @@
                 <label>E-mail</label>
                 <input id="email" name="email" placeholder="E-mail" type="email">
             </div>
+            <div class="field">
+                    <label>Password</label>
+                    <input id="password" name="password" placeholder="password" type="password">
+			</div>    
+            <div class="field">
+                    <label>Checkbox</label>
+                    <input id="checkbox1" name="checkbox1" type="checkbox"/>Checkbox 1
+                    <input id="checkbox2" name="checkbox2"  type="checkbox"/>Checkbox 2
+                    <input id="checkbox3" name="checkbox3"  type="checkbox"/>Checkbox 3
+            </div>  
+            <div class="field">
+                    <label>Dropdown</label>
+                    <select>
+                         <option>Dropdown 1</option>
+                         <option>Dropdown 2</option>
+                         <option>Dropdown 3</option>
+                    </select>
+            </div>  
             <button id="submit" class="ui purple basic button" type="submit">Submit</button>
         </form>
     </div>
